[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"

[[bin]]
name = "day_01"
path = "src/day_01/main.rs"

[[bin]]
name = "day_02"
path = "src/day_02/main.rs"

[[bin]]
name = "day_03"
path = "src/day_03/main.rs"

[[bin]]
name = "day_04"
path = "src/day_04/main.rs"

[[bin]]
name = "day_05"
path = "src/day_05/main.rs"

[[bin]]
name = "day_06"
path = "src/day_06/main.rs"

[[bin]]
name = "day_07"
path = "src/day_07/main.rs"

[[bin]]
name = "day_08"
path = "src/day_08/main.rs"

[[bin]]
name = "day_09"
path = "src/day_09/main.rs"

[[bin]]
name = "day_10"
path = "src/day_10/main.rs"

[[bin]]
name = "day_11"
path = "src/day_11/main.rs"

[[bin]]
name = "day_12"
path = "src/day_12/main.rs"

[[bin]]
name = "day_13"
path = "src/day_13/main.rs"
